#############################################################################
# Author Jan Broeckhove, CoMP/UA, 2011
#############################################################################

#============================================================================
# Go to subdirs
#============================================================================
add_subdirectory( g3log )
#############################################################################
